# sql-executor

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: api.rst  conf.py  index.rst  usage.rst
src/sql_executor/: __init__.py  base.py  fake.py  sqlserver.py
tests/: test_fake_executor.py
